                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.4.0



Changes with APR-util 1.3.0

  *) Add support for OpenLDAP's ability to support a directory of 
     certificate authorities. [Eric Covener]

  *) Ensure that the LDAP code can compile cleanly on platforms that do
     not define the LDAP_OPT_REFHOPLIMIT symbol, most specifically Windows.
     [Victor <victorjss@gmail.com>, Graham Leggett]

  *) Fix the setting of LDAP_OPT_SSL on Win2k, which expects a pointer to
     the value LDAP_OPT_ON, and not the value itself. XP works with both.
     [Victor <victorjss@gmail.com>]

  *) Fix a regression in apr_brigade_partition that causes integer overflows
     on systems where apr_off_t > apr_size_t.  [Ruediger Pluem]

  *) Ensure that apr_uri_unparse does not add scheme to URI if
     APR_URI_UNP_OMITSITEPART flag is set. PR 44044
     [Michael Clark <michael metaparadigm.com>]

  *) Add an LDAP rebind implementation so that authentication can be
     carried through referrals. [Paul J. Reder]

  *) Fix the make test target in the spec file. [Graham Leggett]

  *) Expose the SSL EVP interface to encrypt and decrypt arbitrary
     blocks of data, using symmetrical keys. Experimental support for
     asymmetrical public/private keys as supported by OpenSSL v0.9.9.
     [Graham Leggett]

  *) Introduce apr_dbd_open_ex() [Bojan Smojver]

  *) Make md5 hash files portable between EBCDIC and ASCII platforms  
     [David Jones]

  *) Add limited apr_dbd_freetds driver (MSSQL and Sybase) [Nick Kew]

  *) Commit relicensed apr_dbd_mysql driver to /trunk/  [Nick Kew]

  *) Support BerkeleyDB 4.6.  [Arfrever Frehtes Taifersar Arahesis]

  *) Support Tivoli ITDS LDAP client library.  [Paul Reder]

  *) Portably implement testdate's long-time constants to solve
     compilation faults where #LL isn't valid.  [Curt Arnold]

  *) Use buffered I/O with SDBM.  [Joe Schaefer]
