@@ -1,7 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.4.0
 
-
+  *) Add DTrace Probes to Hooks, making it easier to inspect APR Hook based
+     applications with DTrace. [Theo Schlossnagle <jesus omniti.com>]
 
 Changes with APR-util 1.3.0
 
